[package]
name = "forksrv"
version = "0.2.0"
authors = ["coco <coco@hexgolems.com>", "daniel daniel.teuchert@rub.de"]
description = "The Nautilus forkserver"
license = "AGPL-3.0"
repository = "https://github.com/nautilus-fuzz/nautilus"

[dependencies]
nix = "0.25"
libc = "0.2.70"
tempfile = "3.3"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.4"
snafu = "0.7"
timeout-readwrite = "0.3.1"
